# pathtracer

./: .gitignore  add_pragmas.py  lens.hs  pathtracer.cabal  rm_pragmas.py  stack.yaml
app/: #Main.hs#  Accelerate.hs  Loop.hs  Main.hs  Main.hs~  Web.hs  Write.hs
src/: .gitignore  Color.hs  Conversion.hs  Lib.hs  Lib.hs~  Object.hs  Object.hs~  Object2.hs  Object2.hs~  Objects.hs  Parameters.hs  Params.hs  Ray.hs  Scratch.hs  Scratch.hs~  State.hs  Triple.hs  Util.hs
templates/: home.hamlet  home.julius
test/: Props.hs  Props.hs~  Spec.hs
