name:                pathtracer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pathtracer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Triple, Object, Util, Params
  build-depends:       base >= 4.7 && < 5
                     , repa
                     , AC-Angle
                     , vector
                     , random
                     , QuickCheck
  default-language:    Haskell2010

executable Write
  hs-source-dirs:      app
  main-is:             Write.hs
  ghc-options:
                     -O4
                     -threaded
                     -rtsopts
                     "-with-rtsopts=-N"
  build-depends:       base 
                     , pathtracer
                     , repa
                     , JuicyPixels
                     --, time
  default-language:    Haskell2010

test-suite pathtracer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pathtracer
                     , random
                     , QuickCheck
                     , AC-Angle
                     , repa
                     --, repa-algorithms
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pathtracer
