name:                pathtracer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pathtracer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Triple, Object, Util, Params, Conversion
  build-depends:       base >= 4.7 && < 5
                     , repa
                     , AC-Angle
                     , JuicyPixels
                     , vector
                     , random
                     , QuickCheck
                     , text
                     , base64-bytestring
                     , bytestring
  default-language:    Haskell2010


executable web
  hs-source-dirs:      app
  main-is:             Web.hs
  ghc-options:         -Odph 
                       -rtsopts 
                       -threaded 
                       -fno-liberate-case 
                       -funfolding-use-threshold1000 
                       -funfolding-keeness-factor1000 
                       -fllvm 
                       -optlo-O3
  build-depends:       base
                     , pathtracer
                     , yesod-websockets
                     , shakespeare
                     , yesod-core        >= 1.4
                     , conduit           >= 1.0.15.1
                     , text
                     , base64-bytestring
                     , bytestring
                     , repa
                     , JuicyPixels
                     -- Just for CPP macro
                     --, wai

  default-language:    Haskell2010

executable write
  hs-source-dirs:      app
  main-is:             Write.hs
  ghc-options:         -Odph 
                       -rtsopts 
                       -threaded 
                       -fno-liberate-case 
                       -funfolding-use-threshold1000 
                       -funfolding-keeness-factor1000 
                       -fllvm 
                       -optlo-O3
  build-depends:       base 
                     , pathtracer
                     , repa
                     , JuicyPixels
  default-language:    Haskell2010

test-suite pathtracer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pathtracer
                     , random
                     , QuickCheck
                     , AC-Angle
                     , repa
                     --, repa-algorithms
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pathtracer
