name:                pathtracer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pathtracer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,Object, Objects, Params, Ray,State, Triple, Util, Color
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , repa
                     , AC-Angle
                     , JuicyPixels
                     , vector
                     , random
                     , QuickCheck
                     , text
                     , base64-bytestring
                     , bytestring 
                     , conduit
                     , range
  default-language:    Haskell2010

executable write
  hs-source-dirs:      app
  main-is:             Write.hs
  ghc-options:         -Odph 
                       -rtsopts 
                       -with-rtsopts=-N
                       -threaded 
                       -fno-liberate-case 
                       -funfolding-use-threshold1000 
                       -funfolding-keeness-factor1000 
                       -fllvm 
                       -optlo-O3
  build-depends:       base 
                     , pathtracer
                     , JuicyPixels
  default-language:    Haskell2010

test-suite pathtracer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pathtracer
                     , QuickCheck
                     , AC-Angle
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pathtracer
